--- a/contact.html
+++ b/contact.html
@@ -69,6 +69,7 @@
         <a href="https://www.github.com/lennyqd" class="github"><i class="bi bi-github"></i></a>
         <a href="https://www.instagram.com/52lenny" class="instagram"><i class="bi bi-instagram"></i></a>
         <a href="https://www.linkedin.com/lennyqd" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+        <a href="https://www.youtube.com/channel/UCCDYqW56eI2L3MkNT9efu7g" class="youtube"><i class="bi bi-youtube"></i></i></a>
         <a href="https://www.tiktok.com/52lenny" class="tiktok"><i class="bi bi-tiktok"></i></a>
       </div>
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
@@ -123,10 +124,10 @@
               <div>
                 <h4>Social Media:</h4>
                 <p>
-                <a href="www.github.com/lennyqd" target="_blank">Github</a><br>
-                <a href="www.instagram.com/52lenny" target="_blank">Instagram</a><br>
-                <a href="www.linkedin.com/lennyqd" target="_blank">LinkedIn</a><br>
-                <a href="www.tiktok.com/52lenny" target="_blank">Tiktok</a>
+                <a href="https://www.github.com/lennyqd" target="_blank">Github</a><br>
+                <a href="https://www.instagram.com/52lenny" target="_blank">Instagram</a><br>
+                <a href="https://www.linkedin.com/in/lennyqd/" target="_blank">LinkedIn</a><br>
+                <a href="https://www.youtube.com/channel/UCCDYqW56eI2L3MkNT9efu7g" target="_blank">Youtube</a>
                 </p>
               </div>
             </div>
