--- a/header.html
+++ b/header.html
@@ -36,8 +36,9 @@
       <div class="header-social-links">
         <a href="https://www.github.com/lennyqd" class="github"><i class="bi bi-github"></i></a>
         <a href="https://www.instagram.com/52lenny" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="https://www.linkedin.com/lennyqd" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
-        <a href="https://www.tiktok.com/52lenny" class="tiktok"><i class="bi bi-tiktok"></i></a>
+        <a href="https://www.linkedin.com/in/lennyqd/" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+        <a href="https://www.youtube.com/channel/UCCDYqW56eI2L3MkNT9efu7g" class="youtube"><i class="bi bi-youtube"></i></i></a>
+        <a href="https://www.tiktok.com/@52lenny" class="tiktok"><i class="bi bi-tiktok"></i></a>
       </div>
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
