--- a/videography.html
+++ b/videography.html
@@ -126,8 +126,9 @@
       <div class="header-social-links">
         <a href="https://www.github.com/lennyqd" class="github"><i class="bi bi-github"></i></a>
         <a href="https://www.instagram.com/52lenny" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="https://www.linkedin.com/lennyqd" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
-        <a href="https://www.tiktok.com/52lenny" class="tiktok"><i class="bi bi-tiktok"></i></a>
+        <a href="https://www.linkedin.com/in/lennyqd/" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+        <a href="https://www.youtube.com/channel/UCCDYqW56eI2L3MkNT9efu7g" class="youtube"><i class="bi bi-youtube"></i></i></a>
+        <a href="https://www.tiktok.com/@52lenny" class="tiktok"><i class="bi bi-tiktok"></i></a>
       </div>
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
@@ -229,25 +230,25 @@
     <div class="carousel-inner">
         <div class="carousel-item active">
             <video id="video-1" class="d-block" controls autoplay muted loop>
-                <source src="https://github.com/lennyqd/lennywebsite/blob/main/assets/img/gallery/video/v1.mp4" type="video/mp4">
+                <source src="https://rawcdn.githack.com/lennyqd/lennywebsite/5330d1f0196d61e9729bc6feacac609c090873a6/assets/img/gallery/video/v1.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
         <div class="carousel-item">
             <video id="video-2" class="d-block" controls autoplay muted loop>
-                <source src="https://github.com/lennyqd/lennywebsite/blob/main/assets/img/gallery/video/v2.mp4" type="video/mp4">
+                <source src="https://rawcdn.githack.com/lennyqd/lennywebsite/5330d1f0196d61e9729bc6feacac609c090873a6/assets/img/gallery/video/v2.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
         <div class="carousel-item">
             <video id="video-3" class="d-block" controls autoplay muted loop>
-                <source src="https://github.com/lennyqd/lennywebsite/blob/main/assets/img/gallery/video/v3.mp4" type="video/mp4">
+                <source src="https://rawcdn.githack.com/lennyqd/lennywebsite/5330d1f0196d61e9729bc6feacac609c090873a6/assets/img/gallery/video/v3.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
         <div class="carousel-item">
           <video id="video-4" class="d-block" controls autoplay muted loop>
-                <source src="https://github.com/lennyqd/lennywebsite/blob/main/assets/img/gallery/video/v4.mp4" type="video/mp4">
+                <source src="https://rawcdn.githack.com/lennyqd/lennywebsite/5330d1f0196d61e9729bc6feacac609c090873a6/assets/img/gallery/video/v4.mp4" type="video/mp4">
               Your browser does not support the video tag.
           </video>
       </div>
