--- a/videography.html
+++ b/videography.html
@@ -229,28 +229,16 @@
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <video id="video-1" class="d-block" controls autoplay muted loop>
-                <source src="https://rawcdn.githack.com/lennyqd/lennywebsite/5330d1f0196d61e9729bc6feacac609c090873a6/assets/img/gallery/video/v1.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
+          <iframe width="560" height="315" src="https://youtu.be/70L60vfGX7w" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="carousel-item">
-            <video id="video-2" class="d-block" controls autoplay muted loop>
-                <source src="https://rawcdn.githack.com/lennyqd/lennywebsite/5330d1f0196d61e9729bc6feacac609c090873a6/assets/img/gallery/video/v2.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
+          <iframe width="560" height="315" src="https://youtu.be/9JqcOlyK0bA" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="carousel-item">
-            <video id="video-3" class="d-block" controls autoplay muted loop>
-                <source src="https://rawcdn.githack.com/lennyqd/lennywebsite/5330d1f0196d61e9729bc6feacac609c090873a6/assets/img/gallery/video/v3.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
+          <iframe width="560" height="315" src="https://youtu.be/KtpCD_ZOWI0" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="carousel-item">
-          <video id="video-4" class="d-block" controls autoplay muted loop>
-                <source src="https://rawcdn.githack.com/lennyqd/lennywebsite/5330d1f0196d61e9729bc6feacac609c090873a6/assets/img/gallery/video/v4.mp4" type="video/mp4">
-              Your browser does not support the video tag.
-          </video>
+          <iframe width="560" height="315" src="https://youtu.be/43Scx6DNCfE" frameborder="0" allowfullscreen></iframe>
       </div>
         <!-- Add more carousel items for additional videos -->
     </div>
