--- a/videography.html
+++ b/videography.html
@@ -229,17 +229,17 @@
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active">
-          <iframe width="560" height="315" src="https://youtu.be/70L60vfGX7w" frameborder="0" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/70L60vfGX7w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <div class="carousel-item">
-          <iframe width="560" height="315" src="https://youtu.be/9JqcOlyK0bA" frameborder="0" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/9JqcOlyK0bA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>        
         </div>
         <div class="carousel-item">
-          <iframe width="560" height="315" src="https://youtu.be/KtpCD_ZOWI0" frameborder="0" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/KtpCD_ZOWI0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>        
         </div>
         <div class="carousel-item">
-          <iframe width="560" height="315" src="https://youtu.be/43Scx6DNCfE" frameborder="0" allowfullscreen></iframe>
-      </div>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/KtpCD_ZOWI0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>      
+        </div>
         <!-- Add more carousel items for additional videos -->
     </div>
 
