--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
               <li><a href="./swe">Software Engineer</a></li>
-              <li><a href="./videography">Videographer</a></li>
+              <li><a href="./videography">Videography</a></li>
               <li><a href="./modeling">Freelance Model</a></li>
               <!-- <li class="dropdown"><a href="#"><span>Sub Menu</span> <i
                     class="bi bi-chevron-down dropdown-indicator"></i></a>
