--- a/videography.html
+++ b/videography.html
@@ -107,7 +107,7 @@
                 class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
               <li><a href="./swe">Software Engineer</a></li>
-              <li><a href="./videography">Videographer</a></li>
+              <li><a href="./videography">Videography</a></li>
               <li><a href="./modeling">Freelance Model</a></li>
               <!-- <li class="dropdown"><a href="#"><span>Sub Menu</span> <i
                     class="bi bi-chevron-down dropdown-indicator"></i></a>
@@ -229,17 +229,29 @@
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/70L60vfGX7w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <video id="video-1" class="d-block" controls autoplay muted loop>
+                <source src="https://drive.google.com/file/d/1H-O37_vmju_07Co138Yc9czyEPQPHCPh/view?usp=sharing" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
         </div>
         <div class="carousel-item">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/9JqcOlyK0bA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>        
+            <video id="video-2" class="d-block" controls autoplay muted loop>
+                <source src="https://github.com/lennyqd/lennywebsite/blob/main/assets/img/gallery/video/v2.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
         </div>
         <div class="carousel-item">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/KtpCD_ZOWI0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>        
+            <video id="video-3" class="d-block" controls autoplay muted loop>
+                <source src="https://github.com/lennyqd/lennywebsite/blob/main/assets/img/gallery/video/v3.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
         </div>
         <div class="carousel-item">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/KtpCD_ZOWI0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>      
-        </div>
+          <video id="video-4" class="d-block" controls autoplay muted loop>
+                <source src="https://github.com/lennyqd/lennywebsite/blob/main/assets/img/gallery/video/v4.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+          </video>
+      </div>
         <!-- Add more carousel items for additional videos -->
     </div>
 
