--- a/videography.html
+++ b/videography.html
@@ -229,28 +229,16 @@
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <video id="video-1" class="d-block" controls autoplay muted loop>
-                <source src="https://drive.google.com/file/d/1H-O37_vmju_07Co138Yc9czyEPQPHCPh/view?usp=sharing" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
+          <iframe src="https://www.youtube.com/embed/70L60vfGX7w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <div class="carousel-item">
-            <video id="video-2" class="d-block" controls autoplay muted loop>
-                <source src="https://github.com/lennyqd/lennywebsite/blob/main/assets/img/gallery/video/v2.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
+          <iframe src="https://www.youtube.com/embed/9JqcOlyK0bA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>  
         </div>
         <div class="carousel-item">
-            <video id="video-3" class="d-block" controls autoplay muted loop>
-                <source src="https://github.com/lennyqd/lennywebsite/blob/main/assets/img/gallery/video/v3.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
+          <iframe src="https://www.youtube.com/embed/9JqcOlyK0bA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> 
         </div>
         <div class="carousel-item">
-          <video id="video-4" class="d-block" controls autoplay muted loop>
-                <source src="https://github.com/lennyqd/lennywebsite/blob/main/assets/img/gallery/video/v4.mp4" type="video/mp4">
-              Your browser does not support the video tag.
-          </video>
+          <iframe src="https://www.youtube.com/embed/9JqcOlyK0bA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       </div>
         <!-- Add more carousel items for additional videos -->
     </div>
