--- a/swe.html
+++ b/swe.html
@@ -49,7 +49,7 @@
                 class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
               <li><a href="./swe">Software Engineer</a></li>
-              <li><a href="./videography">Videographer</a></li>
+              <li><a href="./videography">Videography</a></li>
               <li><a href="./modeling">Freelance Model</a></li>
               <!-- <li class="dropdown"><a href="#"><span>Sub Menu</span> <i
                     class="bi bi-chevron-down dropdown-indicator"></i></a>
@@ -68,8 +68,9 @@
       <div class="header-social-links">
         <a href="https://www.github.com/lennyqd" class="github"><i class="bi bi-github"></i></a>
         <a href="https://www.instagram.com/52lenny" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="https://www.linkedin.com/lennyqd" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
-        <a href="https://www.tiktok.com/52lenny" class="tiktok"><i class="bi bi-tiktok"></i></a>
+        <a href="https://www.linkedin.com/in/lennyqd/" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+        <a href="https://www.youtube.com/channel/UCCDYqW56eI2L3MkNT9efu7g" class="youtube"><i class="bi bi-youtube"></i></i></a>
+        <a href="https://www.tiktok.com/@52lenny" class="tiktok"><i class="bi bi-tiktok"></i></a>
       </div>
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
@@ -92,21 +93,14 @@
 
   </main><!-- End #main -->
 
-  <!-- ======= Footer ======= -->
-  <footer id="footer" class="footer">
-    <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>PhotoFolio</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/photofolio-bootstrap-photography-website-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
+<!-- ======= Footer ======= -->
+<footer id="footer" class="footer">
+  <div class="container">
+    <div class="copyright">
+      &copy; Copyright <strong><span>Lenny Do</span></strong>. All Rights Reserved
     </div>
-  </footer><!-- End Footer -->
+  </div>
+</footer><!-- End Footer -->
 
   <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
