--- a/videography.html
+++ b/videography.html
@@ -331,7 +331,7 @@
 <!-- ======= Hero Section ======= -->
 <section id="hero" class="hero d-flex flex-column justify-content-center align-items-center" data-aos="fade"
   data-aos-delay="100">
-  <a href="./morevideos" class="btn-get-started">More videos!</a>
+  <a href="./morevideos" class="btn-get-started">Click here for more videos! It will take a moment to load the whole page.</a>
 </section><!-- End Hero Section -->
 
 </main><!-- End #main -->
