--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,9 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  <link href="assets/img/icon.jpg" rel="icon">
-  <link href="assets/img/main.jpg" rel="main-icon">
+  <link href="assets/img/icon.png" rel="icon">
+  <link href="assets/img/main.png" rel="main-icon">
+
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
