--- a/videography.html
+++ b/videography.html
@@ -330,7 +330,7 @@
 </div>
 <!-- ======= Hero Section ======= -->
 <section id="hero" class="hero d-flex flex-column justify-content-center align-items-center" data-aos="fade"
-  data-aos-delay="100">
+  data-aos-delay="100" style="text-align: center;">
   <a href="./morevideos" class="btn-get-started">Click here for more videos! It will take a moment to load the whole page.</a>
 </section><!-- End Hero Section -->
 
