--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
               <div class="gallery-click">
-                <p>Videographer</p>
+                <p>Videography</p>
                 <a href="./videography" class="details-link">
                   <img src="assets/img/gallery/video1.jpg" class="img-fluid" alt="">
                 </a>
